== 0.1.1 - 3-Mar-2006

=== General

* 3-Mar-2006 Paul DuBois.
  README: Added URLs for the RubyForge DBI project.

=== MySQL

* 4-Mar-2006 Paul DuBois.
  Mysql.rb: Added state member value to DBI::DatabaseError exceptions for
  MySQL.  If mysql-ruby doesn't define a sqlstate method that provides the
  SQLSTATE value, state is set to nil (which is the default value anyway).
* 3-Mar-2006 Paul DuBois.
  Mysql.rb: Enabled use of mysql_read_default_file and
  mysql_read_default_group options in DSN for MySQL. These options
  enable option files to be read.  This change addresses bug #1951.

== 0.1.0 - 16-Feb-2006
* Project taken over by Kirk Haines, Francis Hwang, Patrick May and Daniel
  Berger as of January, 2006 (with the permission of Michael Neumann).
* Changelog style changed from diff style to summary style.  If you want diffs,
  you can watch the CVS commits at
	http://ruby-dbi.rubyforge.org/statcvs/commit_log.html.
* Old RUnit tests replaced with Test/Unit style tests.  
* Updated the README file to actually include useful documentation instead of
  pointing to an html document.
* Lots of internal file/directory reorganization and renaming - none of which
  should matter to you.
* General refactoring of the DBI::Row class including a bug fix where using
  multiple column references did not return the proper values.
* Corresponding test suite additions and changes for DBI::Row.
* Removed the dbrc.rb file from this distribution.  The dbi-dbrc package can
  be downloaded separately from the RAA or installed as a gem.
* Fixed bug #2793 (silent driver load failure).  This also covers patch #603.
* Fixed bug #1304 (comparing DBI::Timestamp with nil).
* Fixed bugs #2099 (permissions issues on Windows).  This also covers bug
  #2567.

2004-05-20 10:36  tag dbi-0-0-23

2004-05-20 10:36  Michael Neumann <mneumann@ntecs.de>

	Changed:
		lib/dbi/version.rb (1.9), "Exp", lines: +2 -2

	increased version
	
2004-05-20 10:33  Michael Neumann <mneumann@ntecs.de>

	Added: